salesforce-litle-MP/src/objects/Litle_Verification_Result__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Litle Verification Result</relationshipLabel>
        <relationshipName>Litle_Verification_Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Verified__c</fullName>
        <label>Address Verified</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Verified__c</fullName>
        <label>City Verified</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Litle_Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Litle Business</label>
        <referenceTo>Litle_Business__c</referenceTo>
        <relationshipLabel>Litle Verification Result</relationshipLabel>
        <relationshipName>Litle_Verification_Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Litle_Principal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Litle Principal</label>
        <referenceTo>Litle_Principal__c</referenceTo>
        <relationshipLabel>Litle Verification Result</relationshipLabel>
        <relationshipName>Litle_Verification_Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_Address_Phone_Association_Code__c</fullName>
        <label>Name Address Phone Association Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Address_Phone_Association_Desc__c</fullName>
        <label>Name Address Phone Association Desc</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Address_TaxId_Association_Code__c</fullName>
        <label>Name Address TaxId Association Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Address_TaxId_Association_Desc__c</fullName>
        <label>Name Address TaxId Association Desc</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Verified__c</fullName>
        <label>Name Verified</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Description__c</fullName>
        <label>Overall Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Score__c</fullName>
        <label>Overall Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Verified__c</fullName>
        <label>Phone Verified</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxId_Verified__c</fullName>
        <label>Tax Id Verified</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Verified__c</fullName>
        <label>Zip Verified</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Litle Verification Result</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Litle Verification Result Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Litle Verification Result</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>